// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Form Grid Column Not Recommended 1`] = `
<section>
  

  <h1>
    XL3-L2-M2-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col-lg--6 fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-19-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-19-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-lg--6 fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-19a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-19a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-lg--6 fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-19b-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-19b-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Forms/Form Grid Column Possible 1`] = `
<section>
  

  <h1>
    XL3-L1-M1-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-17-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-17-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-17a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-17a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-xl--4 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-17b-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-17b-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  


  <h1>
    XL1-L1-M1-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-18-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-18-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-18a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-18a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Forms/Form Grid Column Recommended 1`] = `
<section>
  

  <h1>
    XL2-L2-M2-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col-md--6  fd-col-lg--6 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-14-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-14-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-md--6 fd-col-lg--6 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-14a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-14a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  


  <h1>
    XL2-L2-M1-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col-md--12 fd-col-lg--6 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-15-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-15-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-md--12 fd-col-lg--6 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-15a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-15a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  


  <h1>
    XL2-L1-M1-S1
  </h1>
  

  <div
    class="fd-container fd-form-layout-grid-container"
  >
    
  
    <div
      class="fd-row"
    >
       
    
      <div
        class="fd-col fd-col-md--12 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-16-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-16-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      

    
      <div
        class="fd-col fd-col-md--12 fd-col-xl--6 fd-col--wrap"
      >
        
      
        <div
          class="fd-row"
        >
          
        
          <div
            class="fd-col fd-col-md--2 fd-col-lg--4 fd-col-xl--12"
          >
            
          
            <label
              class="fd-form-label"
              for="input-16a-name"
            >
              Name:
            </label>
            
        
          </div>
          
        
          <div
            class="fd-col fd-col-md--10 fd-col-lg--8 fd-col-xl--12"
          >
            
          
            <input
              class="fd-input"
              id="input-16a-name"
              placeholder="Enter First and Last Name"
              type="text"
              value="Amelia Perry"
            />
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Forms/Form Grid Four Seven One Compact Layout 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid L Size Default 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid L Size Multiple Form Group 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid L Size Single Form Group 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid M Size Default 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid M Size Full Screen App 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid M Size Full Screen App Long Label 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid M Size Split Screen 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid S Size 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid Xl Default 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid Xl Double Form Group 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid Xl Multiple Form Group 1`] = `


`;

exports[`Storyshots Components/Forms/Form Grid Xl Single Form Group 1`] = `


`;
